Fixed an alignment error with the header component

--- a/src/assets/standardstyles.css
+++ b/src/assets/standardstyles.css
@@ -23,12 +23,14 @@ a {
     z-index: 1;
 }
 
-.main-text-format {
-    position: relative;
-    top: 50%;
-    left: 50%;
+#spacing {
+    width: 100%;
+    height: 62px;
+}
 
-    transform: translate(-50%, -75%);
+.title-text {
+    position: relative;
+    top: 37vh;
 
     font-family: "Neucha", sans-serif;
     font-size: 72px;
@@ -39,12 +41,9 @@ a {
     color: white;
 }
 
-.text {
+.subtitle-text {
     position: relative;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -75%);
+    top: 40vh;
 
     font-family: "Neucha", sans-serif;
     font-size: 32px;
